src/styles.css
:root {
  --header_padding: 10px;
  --sidebar-padding: 30px;
  --sidebar-width: 10rem;

  --main-color: #1B5B7E;
  --secondary-color: #1f7ab4;
  --tertiary-color: #1288d7;
  --text-color: #ffffff;
  --unfocused-text-color: #d2d2d2;
  --bg-color: rgba(234, 245, 255, 0.78);

  --disabled-button-color: #9baebb;
  --disabled-button-text-color: #6a7d8c;

  --disabled-card-color: rosybrown;

  --error-color: #FF80AB;

  font-family: "BreeSerif-regular", serif;

  box-sizing: border-box;
}

body {
  margin: 0;
  background-color: var(--bg-color);
}

@font-face {
  font-family: "BreeSerif-regular";
  src: url("./fonts/BreeSerif-Regular.ttf") format("truetype");
}

.success {
  color: limegreen;
}

.failure {
  color: var(--error-color);
}

button:disabled {
  cursor: not-allowed;
  background-color: var(--disabled-button-color);
  color: var(--disabled-button-text-color);
}

button {
  cursor: pointer;
  padding: 10px;
}

input[type="submit"] {
  font-family: "BreeSerif-regular", serif;
  padding: 10px;
  cursor: pointer;
}

input[type="submit"]:hover {
  background-color: var(--tertiary-color);
  transition: 0.1s ease-in-out;
}

input[type="submit"]:disabled {
  background-color: var(--disabled-button-color);
  color: var(--disabled-button-text-color);
  cursor: not-allowed;
}

.invalid {
  border-color: red;
}

.app-container {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

main {
  flex: 1;
}

